--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/avax.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    
-    <title>NFT Card Game</title>
+    <title>AETHER KNIGHTS</title>
   </head>
   <body>
     <div id="root"></div>
